fix bag with futter on mobile when user type info in input

--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -6,8 +6,8 @@
   width: 100%;
   background-color: #4748EE;
   font-family: 'Montserrat', sans-serif;
-  position: absolute;
-  bottom: 0;
+  // position: sticky;
+  // bottom: 0;
   transition: background-color 0.3s ease-in-out;
 
   &--dark {
